# rctf-scenario3

./: Dockerfile  README.md  launch_script.bash  motd
scenario3-local/: CMakeLists.txt  package.xml
scenario3-local/src/: asker.cpp  talker.cpp
